--- a/index.html
+++ b/index.html
@@ -54,109 +54,4 @@
             <div class="container mx-auto px-6">
                 <div class="text-center mb-16">
                     <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">AI Solutions for Your Business</h2>
-                    <p class="text-xl text-gray-600 max-w-2xl mx-auto">Custom AI implementations designed to solve your unique challenges</p>
-                </div>
-                <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <div class="solution-card">
-                        <div class="solution-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z" />
-                            </svg>
-                        </div>
-                        <h3>AI Strategy</h3>
-                        <p>Comprehensive roadmap for AI adoption aligned with your business goals</p>
-                    </div>
-                    <div class="solution-card">
-                        <div class="solution-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-                            </svg>
-                        </div>
-                        <h3>Custom AI Models</h3>
-                        <p>Tailored machine learning models trained on your specific data</p>
-                    </div>
-                    <div class="solution-card">
-                        <div class="solution-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z" />
-                            </svg>
-                        </div>
-                        <h3>AI Integration</h3>
-                        <p>Seamless integration of AI capabilities into your existing systems</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Testimonials -->
-        <section class="bg-gray-900 text-white py-20">
-            <div class="container mx-auto px-6">
-                <div class="text-center mb-16">
-                    <h2 class="text-3xl md:text-4xl font-bold mb-4">What Our Clients Say</h2>
-                    <p class="text-xl text-gray-300 max-w-2xl mx-auto">Success stories from businesses we've transformed</p>
-                </div>
-                <div class="grid md:grid-cols-3 gap-8">
-                    <div class="testimonial-card">
-                        <div class="testimonial-content">
-                            <p>"StratAIgy's AI solutions increased our operational efficiency by 40% within the first quarter."</p>
-                        </div>
-                        <div class="testimonial-author">
-                            <img src="http://static.photos/people/200x200/1" alt="Client" class="testimonial-image">
-                            <div>
-                                <h4>Sarah Johnson</h4>
-                                <p>CEO, TechCorp</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="testimonial-card">
-                        <div class="testimonial-content">
-                            <p>"The AI strategy they developed gave us a competitive edge in our market. Highly recommend!"</p>
-                        </div>
-                        <div class="testimonial-author">
-                            <img src="http://static.photos/people/200x200/2" alt="Client" class="testimonial-image">
-                            <div>
-                                <h4>Michael Chen</h4>
-                                <p>Director, FinServe</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="testimonial-card">
-                        <div class="testimonial-content">
-                            <p>"Their custom AI model reduced our processing time from hours to minutes. Game-changing."</p>
-                        </div>
-                        <div class="testimonial-author">
-                            <img src="http://static.photos/people/200x200/3" alt="Client" class="testimonial-image">
-                            <div>
-                                <h4>Emma Rodriguez</h4>
-                                <p>CTO, HealthPlus</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- CTA Section -->
-        <section id="contact" class="py-20 bg-gradient">
-            <div class="container mx-auto px-6">
-                <div class="max-w-3xl mx-auto text-center">
-                    <h2 class="text-3xl md:text-4xl font-bold text-white mb-6">Ready to Transform Your Business with AI?</h2>
-                    <p class="text-xl text-white mb-8">Schedule a consultation with our AI experts today</p>
-                    <form class="flex flex-col sm:flex-row gap-4 max-w-xl mx-auto">
-                        <input type="email" placeholder="Your email" class="flex-grow px-4 py-3 rounded-lg focus:outline-none">
-                        <button type="submit" class="btn-white">Get Started</button>
-                    </form>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <custom-footer></custom-footer>
-
-    <script src="components/navbar.js"></script>
-    <script src="components/footer.js"></script>
-    <script src="script.js"></script>
-    <script src="https://huggingface.co/deepsite/deepsite-badge.js"></script>
-</body>
-</html>
+                    <p class="text-xl te
